// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Radio DefaultChecked radio renders fine 1`] = `
<label
  aria-checked={true}
  aria-disabled={undefined}
  className="radio-wrapper"
  htmlFor="radio_attr_for_1"
  role="radio"
  style={undefined}
>
  <span
    className="radio radio--checked radio--md"
  >
    <input
      checked={true}
      className="radio__input"
      disabled={undefined}
      id="radio_attr_for_1"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="radio__inner"
    />
    <span />
  </span>
</label>
`;

exports[`components/Radio Radio renders fine 1`] = `
<label
  aria-checked={true}
  aria-disabled={undefined}
  className="radio-wrapper snapshot-radio-class"
  htmlFor="snapshot-radio-id"
  role="radio"
  style={undefined}
>
  <span
    className="radio radio--checked radio--md"
  >
    <input
      checked={true}
      className="radio__input"
      disabled={undefined}
      id="snapshot-radio-id"
      onChange={[Function]}
      toggle={true}
      type="radio"
    />
    <span
      className="radio__inner"
    />
    <span>
      snapshot radio
    </span>
  </span>
</label>
`;
